# caml

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.temp  README.md  docker-run.sh  manage_versions.py  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer-template.json  docker-run.sh
.github/: pr-labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: PR_validator.yml  bump_version.yml  ci.yml  codacy.yml  codecov.yml  create_release_tag_and_docs.yml  docs.yml  lint.yml  publish_pypi.yml  test.yml  testing.yml
_site/: index.html  search.json  versions.json
_site/01_Home/: installation.html  quickstart.html
_site/02_Concepts/: motivation.html
_site/03_Examples/: AutoCATE.html  CamlCATE.html  FastOLS.html  InteractiveLinearRegression.html  SyntheticDataGenerator.html
_site/03_Reference/: CamlBase.html  CamlCATE.html  CamlDML.html  CamlDRL.html  CamlDynamic.html  CamlEnsemble.html  CamlPolicy.html  cate_line_plot.html  cate_true_vs_estimated_plot.html  dml.CamlDML.html  drl.CamlDRL.html  dynamic.CamlDynamic.html  ensemble.CamlEnsemble.html  extensions.plots.plot.html  extensions.synthetic_data.make_fully_hetereogenous_dataset.html  extensions.synthetic_data.make_partially_linear_constant_dataset.html  extensions.synthetic_data.make_partially_linear_simple_dataset.html  make_fully_hetereogenous_dataset.html  make_partially_linear_constant_dataset.html  make_partially_linear_dataset_simple.html  make_partially_linear_simple_dataset.html  policy.CamlPolicy.html  utils.cls_typechecked.html  utils.descriptors.ValidBoolean.html  utils.descriptors.ValidDataFrame.html  utils.descriptors.ValidFeatureList.html  utils.descriptors.ValidSklearnModel.html  utils.descriptors.ValidSparkSession.html  utils.descriptors.ValidString.html
_site/04_Reference/: AutoCATE.html  FastOLS.html  InteractiveLinearRegression.html  SyntheticDataGenerator.html  cate_histogram_plot.html  cate_line_plot.html  cate_true_vs_estimated_plot.html  (+6 more)
caml/: __init__.py  _generics.py  generics.py  logging.py  monkey_patch.py  utils.py
dev/: index.html  search.json
docs/: .gitignore  _quarto.yml  index.qmd  marimo_examples_to_quarto.sh  objects.json
tests/: run_tests.sh
v0.0.0-dev14/: versions.json
(+280 files in other folders)
