[project]
authors = [{name = "jakepenzak", email = "jacob@pieniazek.me"}]
dependencies = [
    "econml>=0.15.1",
    "flaml>=2.2.0",
    "typeguard>=4.3.0",
    "doubleml>=0.8.0",
    "matplotlib>=3.9.2",
    "xgboost>=2.1.1",
    "rich>=13.9.4",
]
description = "Extensions & abstractions of advanced econometric techniques leveraging machine learning."
name = "caml"
requires-python = ">= 3.10"
version = "0.0.0.dev7"
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python"
]

[dependency-groups]
test = [
    "defusedxml>=0.7.1",
    "genbadge>=1.1.1",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.14.0",
]
dev = [
    "anthropic>=0.42.0",
    "jupyter>=1.1.0",
    "marimo>=0.10.4",
    "pre-commit>=3.5.0",
    "pynvim>=0.5.2",
    "ruff>=0.6.2",
]
docs = [
    "quarto-cli>=1.6.40",
    "quartodoc>=0.9.1",
]

[project.optional-dependencies]
pyspark = [
    "flaml[spark]>=2.2.0",
    "optuna>=3.6.1",
    "pyspark>=3.5.2",
    "ray>=2.35.0",
]
polars = [
    "polars>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = ["scripts/notebooks/",
            ".git",
            ".pytest_cache",
            ".ruff_cache",
            "notebooks/"]

extend-include = ["*.ipynb"]

# Same as Black.
line-length = 88
indent-width = 4

target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402","F401"] # Import violations
"**/{tests,docs,tools}/*" = ["E402"] # Import violations

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "D", "I"]
ignore = ["D401","D100","D101","D102","D103", "E501", "E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"
addopts = "--cov=caml/ --cov-report=term-missing --cov-report=html:tests/reports/htmlcov --cov-report=xml:tests/reports/coverage.xml"
